--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <h4 class="direction">Front-End Developer</h4>
                 <p class="period">April 2022 - May 2022 <span class="line">|</span> Introduction to coding <span class="line">|</span>
                     UK</p>
-                <p class="period">May 2022 - now <span class="line">|</span> Front-End Development <span class="line">|</span>
+                <p class="period">May 2022 - July <span class="line">|</span> Front-End Development <span class="line">|</span>
                     UK</p>
             </div>
         </div>
