--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 <ol class="projects-list">
                     <li class="project-item">
                         <span class="project">
-                            <a href="https://about-spaghetti.netlify.app/" class="project-link">https://about-spaghetti.netlify.app/</a>
-                            ........................
+                            <a href="https://japan-about-info.netlify.app/" class="project-link">https://japan-about-info.netlify.app/</a>
+                            .......................
                             <span class="project-bracket">[</span> HTML, CSS <span class="project-bracket">]</span>
                         </span>
                     </li>
@@ -47,8 +47,8 @@
                     </li>
                     <li class="project-item">
                         <span class="project">
-                            <a href="https://japan-about-info.netlify.app/" class="project-link">https://japan-about-info.netlify.app/</a>
-                            .......................
+                            <a href="https://about-spaghetti.netlify.app/" class="project-link">https://about-spaghetti.netlify.app/</a>
+                            ........................
                             <span class="project-bracket">[</span> HTML, CSS <span class="project-bracket">]</span>
                         </span>
                     </li>
@@ -61,19 +61,19 @@
                 <!-- Company 1 -->
                <div>
                     <h4 class="work-position">Front-End Developer <span class="organization"> Freelance</span></h4>
-                    <p class="period"> January 2022 - up to now <span class="line">|</span> Ukraine</p>
+                    <p class="period"> January 2022 - up to now <span class="line">|</span> UK</p>
                     <ul class="work-list">
                         <li class="work-list-item">
-                            The project "Spaghetti"
+                            The project "about Japan"
                         </li>
                         <li class="work-list-item">
                             The project "Weather App"
                         </li>
                         <li class="work-list-item">
-                            The project "My CV"
+                            The project "Spaghetti"
                         </li>
                         <li class="work-list-item">
-                            The project "about Japan"
+                            The project "My CV"
                         </li>
                     </ul>
                     
@@ -84,7 +84,7 @@
                 <!-- Company 2 -->
                 <div>
                     <h4 class="work-position">Lawyer <span class="organization">PE "Partner-N"</span></h4>
-                    <p class="period"> March 2021 - April 2022 <span class="line">|</span> Ukraine</p>
+                    <p class="period"> March 2021 - April 2022 <span class="line">|</span> UA</p>
                     <ul class="work-list">
                         <li class="work-list-item">
                             Registration of companies
@@ -101,7 +101,7 @@
                 <!-- Company 3 -->
                 <div>
                     <h4 class="work-position">Lawyer <span class="organization">PJSC “Khmelnytsky ATP 16854”</span></h4>
-                    <p  class="period">July 2020 - Febuary 2021 <span class="line">|</span> Ukraine</p>
+                    <p  class="period">July 2020 - Febuary 2021 <span class="line">|</span> UA</p>
                     <ul class="work-list">
                         <li class="work-list-item">
                             Working with contracts
@@ -117,7 +117,7 @@
                 <!-- Company 4 -->
                 <div>
                     <h4 class="work-position">Secretary of the court session <span class="organization">Khmelnytsky City District Court</span></h4>
-                    <p  class="period">September 2019 - January 2020 <span class="line">|</span> Ukraine</p>
+                    <p  class="period">September 2019 - January 2020 <span class="line">|</span> UA</p>
                     <ul class="work-list">
                         <li class="work-list-item">
                             Conducting a court session
@@ -133,7 +133,7 @@
                 <!-- Company 5 -->
                 <div>
                     <h4 class="work-position">Consultant <span class="organization">ProBono Legal Clinic</span></h4>
-                    <p  class="period">October 2016 - July 2019 <span class="line">|</span> Ukraine</p>
+                    <p  class="period">October 2016 - July 2019 <span class="line">|</span> UA</p>
                     <ul class="work-list">
                         <li class="work-list-item">
                             Consultations
@@ -153,14 +153,15 @@
                 <h3 class="title">Education</h3>
                 <h4 class="organization">National University of Ostroh academy</h4>
                 <h4 class="direction">Law</h4>
-                <p class="period">September 2015 - June 2019 <span class="line">|</span> Bachelor's degree <span class="line">|</span> Ukraine</p>
-                <p class="period">September 2019 - January 2021 <span class="line">|</span> Master's degree <span class="line">|</span> Ukraine</p>
+                <p class="period">September 2015 - June 2019 <span class="line">|</span> Bachelor's degree <span class="line">|</span> UA</p>
+                <p class="period">September 2019 - January 2021 <span class="line">|</span> Master's degree <span class="line">|</span> UA</p>
                 <br />
                 <h4 class="organization">SheCodes</h4>
                 <h4 class="direction">Front-End Developer</h4>
-                <p class="period">April 2022 - May 2022 <span class="line">|</span> Introduction to coding <span class="line">|</span>
+                <p class="period">April 2022 - May 2022 <span class="line">|</span> Introduction to coding <span class="line">|</span><a href="img/SheCodes.png" target="_blank" class="link"> Certificate</a> <span class="line">|</span>
                     UK</p>
-                <p class="period">May 2022 - July <span class="line">|</span> Front-End Development <span class="line">|</span>
+                <p class="period">May 2022 - July <span class="line">|</span> Front-End Development <span class="line">|</span><a href="img/SheCodes Front-end developer.png" target="_blank" class="link"> Certificate</a> <span
+                    class="line">|</span>
                     UK</p>
             </div>
         </div>
