Change link for weather app

--- a/index.html
+++ b/index.html
@@ -33,21 +33,21 @@
                 <ol class="projects-list">
                     <li class="project-item">
                         <span class="project">
-                            <a href="https://japan-about-info.netlify.app/" class="project-link">https://japan-about-info.netlify.app/</a>
-                            .......................
+                            <a href="https://japan-about-info.netlify.app/" target="_blank" class="project-link">https://japan-about-info.netlify.app/</a>
+                            ......................
                             <span class="project-bracket">[</span> HTML, CSS <span class="project-bracket">]</span>
                         </span>
                     </li>
                     <li class="project-item">
                         <span class="project">
-                            <a href="https://mar-my-weather-app.netlify.app/" class="project-link">https://mar-my-weather-app.netlify.app/</a>
-                            ............
+                            <a href="https://weather-by-mariiamy.netlify.app/" target="_blank" class="project-link">https://weather-by-mariiamy.netlify.app/</a>
+                            ...........
                             <span class="project-bracket">[</span> HTML, CSS, JavaScript <span class="project-bracket">]</span>
                         </span>
                     </li>
                     <li class="project-item">
                         <span class="project">
-                            <a href="https://about-spaghetti.netlify.app/" class="project-link">https://about-spaghetti.netlify.app/</a>
+                            <a href="https://about-spaghetti.netlify.app/" target="_blank" class="project-link">https://about-spaghetti.netlify.app/</a>
                             ........................
                             <span class="project-bracket">[</span> HTML, CSS <span class="project-bracket">]</span>
                         </span>
