--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 <ol class="projects-list">
                     <li class="project-item">
                         <span class="project">
-                            <a href="https://japan-about-info.netlify.app/" target="_blank" class="project-link">https://japan-about-info.netlify.app/</a>
-                            ......................
+                            <a href="https://about-japan-by-me.netlify.app/" target="_blank" class="project-link">https://about-japan-by-me.netlify.app/</a>
+                            ................
                             <span class="project-bracket">[</span> HTML, CSS <span class="project-bracket">]</span>
                         </span>
                     </li>
@@ -160,8 +160,12 @@
                 <h4 class="direction">Front-End Developer</h4>
                 <p class="period">April 2022 - May 2022 <span class="line">|</span> Introduction to coding <span class="line">|</span><a href="img/SheCodes.png" target="_blank" class="link"> Certificate</a> <span class="line">|</span>
                     UK</p>
-                <p class="period">May 2022 - July <span class="line">|</span> Front-End Development <span class="line">|</span><a href="img/SheCodes Front-end developer.png" target="_blank" class="link"> Certificate</a> <span
+                <p class="period">May 2022 - July 2022<span class="line">|</span> Front-End Development <span class="line">|</span><a href="img/SheCodes Front-end developer.png" target="_blank" class="link"> Certificate</a> <span
                     class="line">|</span>
+                    UK</p>
+                <p class="period">July 2022 - August 2022<span class="line">|</span> Responsive Front-End Development <span class="line">|</span><a
+                        <!-- href="img/SheCodes Front-end developer.png" target="_blank" class="link"> Certificate</a> <span -->
+                        class="line">|</span>
                     UK</p>
             </div>
         </div>
